...
                                                    <constraint firstAttribute="height" constant="20" id="jvU-VQ-zyv"/>
                                                    <constraint firstAttribute="width" constant="20" id="pGq-ul-8P1"/>
                                                </constraints>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NC9-n8-Ipe">
                                                <rect key="frame" x="170" y="0.0" width="184" height="20"/>
                                                <state key="normal" title="Change colour"/>
                                                <connections>
                                                    <action selector="addExistingColour:" destination="wD7-Tn-eq7" eventType="touchUpInside" id="LKv-Se-Y48"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                                                    <constraint firstAttribute="height" constant="20" id="EMm-te-vcg"/>
                                                    <constraint firstAttribute="width" constant="20" id="SO6-78-5H5"/>
                                                </constraints>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xcm-an-sZ6">
                                                <rect key="frame" x="170" y="0.0" width="184" height="20"/>
                                                <state key="normal" title="Change category"/>
                                                <connections>
                                                    <action selector="addExistingCategory:" destination="wD7-Tn-eq7" eventType="touchUpInside" id="aBP-Va-KqW"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                                                    <action selector="textViewDone:" destination="fns-YX-XiB" eventType="primaryActionTriggered" id="bUq-Lw-fdv"/>
                                                </connections>
                                            </textField>
                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" text="Enter your note contents" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sTX-y0-wnr">
                                                <rect key="frame" x="25" y="358" width="364" height="180"/>
                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Contents"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="180" id="n2t-VK-ZHz"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="doneAccessory" value="YES"/>
                                                </userDefinedRuntimeAttributes>
                                            </textView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iq1-Fn-DtU">
                                                <rect key="frame" x="146" y="553" width="122" height="30"/>
                                                <state key="normal" title="Add to a category"/>
                                                <connections>
                                                    <action selector="addCategory:" destination="fns-YX-XiB" eventType="touchUpInside" id="RP9-m4-LMR"/>
                                                </connections>
                                            </button>
                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xa2-uI-8fi">
                                                <rect key="frame" x="174.5" y="583" width="65" height="30"/>
...
                                                <connections>
                                                    <action selector="addNote:" destination="fns-YX-XiB" eventType="touchUpInside" id="dKz-Cc-420"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nc9-0e-r86">
                                                <rect key="frame" x="160" y="583" width="94" height="30"/>
                                                <state key="normal" title="Choose Emoji"/>
                                                <connections>
                                                    <action selector="chooseEmoji:" destination="fns-YX-XiB" eventType="touchUpInside" id="Ic4-ut-sfE"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAd-mf-Ol3">
                                                <rect key="frame" x="207" y="613" width="0.0" height="0.0"/>
...
