...
        self.present(sheet, animated: true, completion: nil)
    }
    
    func enterCategory() {
        let ac = UIAlertController(title: "Enter category", message: nil, preferredStyle: .alert)
        ac.addTextField()
        let submitAction = UIAlertAction(title: "Submit", style: .default) { [unowned ac] _ in
            if let answer = ac.textFields?[0] {
                self.existingCategory.text = answer.text
                self.newCategory = answer.text
                if let cat = self.newCategory, let col = self.newColor {
                    self.updateCategory(cat, col)
                }
...
