...
    }
    
    @IBAction func addCategory(_ sender: UIButton) {
        createNoteViewModel?.getCategories{ categories in
            let sheet = UIAlertController(title: "Select Category", message: nil, preferredStyle: .actionSheet)
            
            let newcat = UIAlertAction(title: "Create a new category", style: .default, handler: { action in
                self.performSegue(withIdentifier: "addCat", sender: nil)
            }
            )
            
            for category in categories {
                let cat = UIAlertAction(title: category.name ?? "unnamed", style: .default, handler: { action in
...
